fix text overlap

--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@ header {
 #headline {
   display: flex;
   align-items: center;
-  width: 45%;
+  max-width: 55%;
 }
 
 #headline h2 {
@@ -569,7 +569,7 @@ h2 {
   }
 
   #headline h2 {
-    font-size: 1.7rem;
+    font-size: 1.4rem;
   }
 }
 
